[package]
name = "ripioc"
version = "0.1.0"
authors = ["Oliver Daff <oliverdaff@users.noreply.github.com>"]
edition = "2018"

[features]
serde_support = ["serde"]

[dependencies]
fancy-regex = "0.14.0"
lazy_static = "1.4.0"
regex = "1"
serde = { version = "1",  features = ["derive"], optional = true }
